--- a/css/general.css
+++ b/css/general.css
@@ -1,13 +1,42 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 * {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
+html {
+	font-family: Helvetica, Arial, sans-serif;
+	background-color:#efefef;
+	margin: 2% 20% 2% 20%;
+}
+
+h1,
+h2 {
+	text-align: center;
+	margin: 0;
+}
+
+h2 {
+	border-bottom: 1px solid #9F1316;
+	padding: 0% 0% 3% 0%;
+	margin-bottom: 5%;
+}
+
+body {
+	background-color:#fff;
+	padding: 2% 4% 2% 4%;
+}
+
 label {
 	display: block;
-	
 	cursor: pointer;
+	
 }
 
 input,
@@ -30,20 +59,30 @@ input + label {
 }
 
 button {
-	padding: 1em;
+	padding: 0.5em;
 	font-size:1.125rem;
-	border: 2px solid #00f;
-	background-image: linear-gradient(to bottom, #00f, #66e);
+	background-color:#9F1316;
 	color: #fff;
-	border-radius: 8px;
 	cursor: pointer;
 }
 
 .error {
 	display: block;
-	color:#f33;
+	color:#9F1316;
 }
 
 .input-error {
-	border: 3px solid #f33;
+	border: 1px solid #9F1316;
+}
+
+@media only screen and (min-width: 25em) {
+	html {
+	margin: 2%;
+	}
+}
+
+@media only screen and (min-width: 37em) {
+	html {
+	margin: 2% 20% 2% 20%;
+	}
 }
