added visual design to css

--- a/css/general.css
+++ b/css/general.css
@@ -11,26 +11,35 @@
 }
 
 html {
-	font-family: Helvetica, Arial, sans-serif;
-	background-color:#efefef;
-	margin: 2% 20% 2% 20%;
+	font-family: 'Oswald', sans-serif;
+	background-color:#000000;
+	padding: 2%;
+}
+
+h1 {
+	font-size:2.5em;
+	line-height: 1em;
 }
 
 h1,
 h2 {
 	text-align: center;
 	margin: 0;
+	text-transform:uppercase;
+	color: #48201b;
 }
 
 h2 {
-	border-bottom: 1px solid #9F1316;
-	padding: 0% 0% 3% 0%;
-	margin-bottom: 5%;
+	border-bottom: 1px solid #48201b;
+	padding: 0% 0% 1% 0%;
+	margin-bottom: 2%;
 }
 
 body {
 	background-color:#fff;
 	padding: 2% 4% 2% 4%;
+	background-color: rgba(255, 255, 255, 0.8)
+
 }
 
 label {
@@ -61,27 +70,55 @@ input + label {
 button {
 	padding: 0.5em;
 	font-size:1.125rem;
-	background-color:#9F1316;
+	background-color:#48201b;
 	color: #fff;
 	cursor: pointer;
+	margin: 2% 0 0 0;
 }
 
 .error {
 	display: block;
-	color:#9F1316;
+	color:#D2282A;
+	font-size: 0.9em;
 }
 
 .input-error {
-	border: 1px solid #9F1316;
+	border: 2px solid #9F1316;
+}
+
+.hawkmoth {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media only screen and (min-width: 25em) {
 	html {
-	margin: 2%;
+	margin: 5%;
+	}
+	
+	.hawkmoth {
+	width: 100%;
 	}
 }
 
-@media only screen and (min-width: 37em) {
+@media only screen and (min-width: 35em) {
+	html {
+	margin: 5%;
+	}
+	
+	.hawkmoth {
+	max-width: 60%;
+}
+
+@media only screen and (min-width: 45em) {
+	html {
+	margin: 5%;
+	}
+	
+}
+
+@media only screen and (min-width: 60em) {
 	html {
 	margin: 2% 20% 2% 20%;
 	}
