--- a/css/general.css
+++ b/css/general.css
@@ -100,6 +100,10 @@ button {
 	.hawkmoth {
 	width: 100%;
 	}
+	
+	input + label {
+	display: block;
+	}
 }
 
 @media only screen and (min-width: 35em) {
@@ -109,6 +113,10 @@ button {
 	
 	.hawkmoth {
 	max-width: 60%;
+	}
+	
+	input + label {
+	display: inline-block;
 	}
 }
 
